# mm-bot-boilerplate

./: .gitignore  README.md  main.py  mixin-example.json  operation-example.json  pyproject.toml  requirements.txt
thebot/: cache.py  error_handler.py  my_bot.py  types.py
thebot/commander/: handler.py
thebot/commander/utils/: command.py  render.py
thebot/message_handler/: __init__.py  handle_conversation_actions.py  handle_media.py  handle_text.py  handle_transfer.py  index.py
