[project]
name = "mm-bot-boilerplate"
version = "0.1.0"
description = "Mixin Messenger Bot Boilerplate"
authors = [{ name = "NodeWee", email = "nodewee@gmail.com" }]
dependencies = [
    "mixinsdk @ https://github.com/nodewee/mixin-sdk-python/releases/download/v0.2.1/mixinsdk-0.2.1-py3-none-any.whl",
    "memoization>=0.4.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]

[tool.pdm]
